Updates to individual Kanban cards - Minimized size of the first cell - Added scrollbar and fixed to a horizontal flow

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,14 +38,10 @@ h1 {
 
 .kanban-view-wrapper {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  height: 95vh;
+  grid-template-rows: repeat(7, auto);
   gap: 0px;
 }
 
-.kanban-card {
-  padding: 0px 20px 0px;
-}
 
 .kanban-view-wrapper > form {
   background: blue;
@@ -53,9 +49,44 @@ h1 {
 
 .kanban-card {
   display: grid;
-  grid-auto-flow: column;
+  grid-template-columns: 100px;
+  grid-auto-columns: 220px;
+  grid-auto-flow: column; 
+  padding: 0px 20px 0px;
+  overflow-x: auto;
   border-top: 1px solid white;
   align-items: baseline;
+}
+
+/* Scrollbar Styling */
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+*:hover::-webkit-scrollbar-thumb {
+  background: linear-gradient(135deg, #5adaff 0%, #5468ff 100%);
+  border: 2px solid rgba(34, 73, 156, 0.3);
+  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px;
+}
+
+*:hover::-webkit-scrollbar-track {
+  background: rgba(34, 73, 156, 0.3);
+  border-radius: 6px;
 }
 
 .kanban-card:first-of-type {
@@ -159,7 +190,6 @@ h1 {
 
 form {
   color: white;
-  width: clamp(100px, 150px, 2fr);
   background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
   box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
   font-size: 12px;
